--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
-body {
+body,html {
   margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #ffe370;
 }
 
 code {
