--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -1,3 +1,11 @@
+
+.game {
+  margin: 20px 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .cards-container {
   display: flex;
   flex-wrap: wrap;
@@ -9,4 +17,53 @@
   width: 30%;
   margin-left: 10px;
   margin-bottom: 10px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.btn-container {
+  display: flex;
+}
+
+$btn-color: #ff8b51;
+
+.btn {
+  box-sizing: border-box;
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid $btn-color;
+  border-radius: 0.6em;
+  color: $btn-color;
+  cursor: pointer;
+  display: flex;
+  align-self: center;
+  font-size: 1rem;
+  line-height: 1;
+  margin: 20px;
+  padding: 0.5em 2.2em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  
+  background: {
+    image: linear-gradient(45deg, $btn-color 50%, transparent 50%);
+    position: 100%;
+    size: 400%;
+  }
+  transition: background 300ms ease-in-out;
+  
+  &:hover,
+  &:focus {
+    color: #fff;
+    outline: 0;
+    background-position: 0;
+  }
+  
 }
