--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -11,6 +11,36 @@
   flex-wrap: wrap;
   flex-direction: row;
   width: 400px;
+  position: relative;
+  
+  .gameOver {
+    position: absolute;
+    top: -10px;
+    border-radius: 20px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(255,255,255, .3);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+    .stamp {
+      transform: rotate(12deg);
+      color: #555;
+      font-size: 3rem;
+      font-weight: 700;
+      border: 0.25rem solid #555;
+      display: inline-block;
+      padding: 0.25rem 1rem;
+      text-transform: uppercase;
+      border-radius: 1rem;
+      -webkit-mask-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png');
+      -webkit-mask-size: 944px 604px;
+      mix-blend-mode: multiply;
+      
+    }
+  }
 }
 
 .card {
@@ -67,13 +97,16 @@ $btn-color: #ff8b51;
     size: 400%;
   }
   
-  transition: background 300ms ease-in-out;
+  transition: all 400ms ease-in-out;
   
-  &:hover,
-  &:focus {
+  &:hover {
     color: #fff;
     outline: 0;
     background-position: 0;
+  }
+  
+  &:focus {
+    outline: 0;
   }
   
   &:disabled {
@@ -82,3 +115,5 @@ $btn-color: #ff8b51;
     opacity: .5;
   }
 }
+
+
