--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -2,7 +2,7 @@
   width: 100px;
   height: 170px;
   background: white;
-  border: 1px solid rgba(0,0,0, .4);
+  position: relative;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -11,17 +11,40 @@
   box-shadow: -4px 2px 11px -4px rgba(0,0,0,0.31);
   cursor: pointer;
   box-sizing: border-box;
+  transition: all .1s ease-in;
+  
+  &:after {
+    display: block;
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    content: '';
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transition: all .1s ease-in;
+    border: 2px solid hotpink;
+    border-color: rgba(hotpink, 0)
+  }
   
   &.selected {
-    box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.5);
-    border: 2px solid rgb(107, 91, 5);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    transform: scale(1.04);
     
-    &-auto {
-      border-color: hotpink;
-      box-shadow: 0px 1px 8px 1px rgba(hotpink, 0.5);
+    &:after {
+      border-color: #0284ff;
+    }
+  }
+  
+  &.highlighted {
+    box-shadow: 0 2px 4px hotpink;
+    
+    &:after {
+      box-shadow: 0 0 0 2px red inset
     }
   }
 }
+
 
 .item {
   display: block;
