--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -4,13 +4,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 
 .cards-container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  width: 550px;
+  width: 500px;
   position: relative;
   
   .gameOver {
@@ -45,8 +46,8 @@
 
 .card {
   width: 22%;
-  margin-left: 10px;
-  margin-bottom: 10px;
+  margin-left: 15px;
+  margin-bottom: 15px;
 }
 
 $btn-color: #ff8b51;
