--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body,html {
   background: #ffe370;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  overflow: hidden;
 }
