--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body,html {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #ffe370;
+  background: #FFD470;
 }
 
 body {
