--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -1,19 +1,23 @@
+$black: #041B15;
 
 .game {
-  margin: 20px 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow: hidden;
 }
 
+h1 {
+  color: $black;
+}
+
 .cards-container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  width: 500px;
+  width: 510px;
   position: relative;
-  
+  justify-content: space-between;
   .gameOver {
     position: absolute;
     top: -10px;
@@ -45,8 +49,6 @@
 }
 
 .card {
-  width: 22%;
-  margin-left: 15px;
   margin-bottom: 15px;
 }
 
@@ -56,8 +58,12 @@ $btn-color: #ff8b51;
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
+  padding: 10px 20px 0 20px;
+  box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  box-shadow: 0 7px 7px 0px rgba($black, .1);
+  background-color: rgba(255, 255, 255, .1);
   
   .info {
     font-size: 1.1rem;
