put cards programmatically

--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -16,6 +16,7 @@ h1 {
   flex-wrap: wrap;
   flex-direction: row;
   width: 510px;
+  height: 600px;
   position: relative;
   justify-content: space-between;
   .gameOver {
