--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -2,7 +2,7 @@
   width: 115px;
   height: 170px;
   background: white;
-  position: relative;
+  position: absolute;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
