--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -1,4 +1,18 @@
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateY(-10%);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 .card {
+  animation: .5s ease-out 0s 1 slideInFromLeft;
   width: 115px;
   height: 170px;
   background: white;
