--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -47,16 +47,21 @@ h1 {
 $btn-color: #ff8b51;
 
 .header {
-  display: flex;
-  justify-content: space-between;
   width: 100%;
-  margin-bottom: 25px;
-  padding: 10px 20px 0 20px;
-  box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
   box-shadow: 0 7px 7px 0px rgba($black, .1);
   background-color: rgba(255, 255, 255, .1);
-  
+  padding: 10px 0 0 0;
+  margin-bottom: 25px;
+  .header-content {
+    max-width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto 10px;
+    padding: 0 20px;
+    
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+  }
   .info {
     font-size: 1.1rem;
     color: $btn-color;
